[gd_scene load_steps=7 format=2]

[ext_resource path="res://src/gui/ld_loading_screen.gd" type="Script" id=1]
[ext_resource path="res://addons/scaffolder/src/gui/widgets/spacer.tscn" type="PackedScene" id=2]
[ext_resource path="res://addons/scaffolder/src/gui/widgets/scaffolder_label.tscn" type="PackedScene" id=3]
[ext_resource path="res://addons/scaffolder/src/gui/widgets/scaffolder_progress_bar.tscn" type="PackedScene" id=4]
[ext_resource path="res://addons/scaffolder/assets/fonts/pxlzr_font_m.tres" type="DynamicFont" id=5]
[ext_resource path="res://addons/scaffolder/assets/fonts/pxlzr_font_s.tres" type="DynamicFont" id=6]

[node name="LoadingScreen" type="VBoxContainer"]
rect_min_size = Vector2( 1024, 768 )
script = ExtResource( 1 )
screen_name = "loading"
nav_bar_font_size = "L"
is_back_button_shown = false

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 282.0
margin_right = 742.0
margin_bottom = 463.0
rect_min_size = Vector2( 460, 0 )
size_flags_horizontal = 4
size_flags_vertical = 4
custom_constants/separation = 16

[node name="LoadingImageWrapper" type="VBoxContainer" parent="VBoxContainer"]
margin_left = 166.0
margin_right = 294.0
margin_bottom = 144.0
size_flags_horizontal = 4
size_flags_vertical = 4
custom_constants/separation = 0

[node name="Spacer2" parent="VBoxContainer/LoadingImageWrapper" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 64.0
margin_top = 128.0
margin_right = 64.0
margin_bottom = 144.0
rect_min_size = Vector2( 0, 16 )
size = Vector2( 0, 16 )

[node name="Text" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 160.0
margin_right = 460.0
margin_bottom = 229.0

[node name="ScaffolderLabel" parent="VBoxContainer/Text" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 460.0
margin_bottom = 49.0
rect_min_size = Vector2( 320, 0 )
custom_fonts/font = ExtResource( 6 )
text = "Build solar stations, connect power lines, and collect more energy before you run out!"
align = 3
valign = 0
autowrap = true
font_size = "S"
size_override = Vector2( 320, 0 )

[node name="Spacer3" parent="VBoxContainer/Text" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 230.0
margin_top = 53.0
margin_right = 230.0
margin_bottom = 69.0
rect_min_size = Vector2( 0, 16 )
size = Vector2( 0, 16 )

[node name="ClickToContinueMessage" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 245.0
margin_right = 460.0
margin_bottom = 304.0

[node name="ScaffolderLabel" parent="VBoxContainer/ClickToContinueMessage" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 460.0
margin_bottom = 39.0
custom_fonts/font = ExtResource( 5 )
text = "Tap to continue."
autowrap = true

[node name="Spacer4" parent="VBoxContainer/ClickToContinueMessage" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 230.0
margin_top = 43.0
margin_right = 230.0
margin_bottom = 59.0
rect_min_size = Vector2( 0, 16 )
size = Vector2( 0, 16 )

[node name="LoadingProgress" type="VBoxContainer" parent="VBoxContainer"]
margin_left = 70.0
margin_top = 320.0
margin_right = 390.0
margin_bottom = 463.0
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="ProgressBar" parent="VBoxContainer/LoadingProgress" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 320.0
margin_bottom = 14.0
rect_min_size = Vector2( 320, 0 )
size_override = Vector2( 320, 0 )

[node name="Duration" parent="VBoxContainer/LoadingProgress" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 160.0
margin_top = 18.0
margin_right = 160.0
margin_bottom = 57.0
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 5 )
valign = 0

[node name="Label1" parent="VBoxContainer/LoadingProgress" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 160.0
margin_top = 61.0
margin_right = 160.0
margin_bottom = 100.0
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 5 )
valign = 0

[node name="Label2" parent="VBoxContainer/LoadingProgress" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 160.0
margin_top = 104.0
margin_right = 160.0
margin_bottom = 143.0
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 5 )
valign = 0
